BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Retargeting_BMS_CN__c.object
<CustomObject>
    <description>Target Customers of Next Month for China</description>
    <fields>
        <fullName>Action_Type_BMS_CN__c</fullName>
        <description>Action Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Flag</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_BMS_CN__c</fullName>
        <description>Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_Final_BMS_CN__c</fullName>
        <description>Final Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_Original_BMS_CN__c</fullName>
        <description>Original Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_Verified_BMS_CN__c</fullName>
        <description>Verified Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BC_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BC</description>
        <label>BC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BD</description>
        <label>BD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BL_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BL</description>
        <label>BL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BP</description>
        <label>BP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_BMS_CN__c</fullName>
        <description>Business Unit</description>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONCO-SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONCO-TAXOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beds_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Beds - Monopril管辖病床数</description>
        <label>Beds(Monopril)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beds_Eliquis_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Beds - Eliquis管辖病床数</description>
        <label>Beds(Eliquis)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CML_First_Treated_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CML First Treated Patients - CML初治新病人数</description>
        <label>CML First Treated Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CML_Patients_BMS_CN__c</fullName>
        <formula>CML_First_Treated_Patients_BMS_CN__c  +  CML_Re_treated_Patients_BMS_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CML Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CML_Re_treated_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CML Re-treated Patients - CML复治新病人数</description>
        <label>CML Re-treated Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Product_BMS_CN__c</fullName>
        <description>Product list of CV</description>
        <label>CV Product</label>
        <picklist>
            <picklistValues>
                <fullName>Monopril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliquis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_Final_BMS_CN__c</fullName>
        <description>Final Comments</description>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Verified_BMS_CN__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DN_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DN</description>
        <label>DN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_BMS_CN__c</fullName>
        <description>Decision Making</description>
        <label>Decision Making</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Power_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Decision Power - 直接决策力</description>
        <label>Decision Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Decision_of_Beds_Index_BMS_CN__c</fullName>
        <description>Decision of Beds Index - 决策病床指数</description>
        <formula>Beds_BMS_CN__c * Decision_Power_BMS_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision of Beds Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_BMS_CN__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Final_BMS_CN__c</fullName>
        <description>Final Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Original_BMS_CN__c</fullName>
        <description>Original Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Phone_BMS_CN__c</fullName>
        <description>Department phone used by InVentiv</description>
        <label>Department Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Verified_BMS_CN__c</fullName>
        <description>Verified Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doctor_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Doctor Account</description>
        <label>Doctor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Re-targetings</relationshipLabel>
        <relationshipName>Next_Month_Target_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Code_BMS_CN__c</fullName>
        <description>Master code of doctor inputted by InVentiv</description>
        <label>Doctor Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_ID_BMS_CN__c</fullName>
        <description>Master ID of doctor popped up from Account Profile</description>
        <label>Doctor ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_BMS_CN__c</fullName>
        <description>Doctor Name inputted by Rep</description>
        <label>Doctor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_Final_BMS_CN__c</fullName>
        <description>Final Doctor Name inputted by SFE(Only for add new doctor)</description>
        <label>Doctor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_Verified_BMS_CN__c</fullName>
        <description>Verified Doctor Name inputted by InVentiv(Only for add new doctor)</description>
        <label>Doctor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gemzar_1g_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Gemzar 1g - 健择 1g</description>
        <label>Gemzar 1g</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gemzar_200mg_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Gemzar 200mg - 健择 200mg</description>
        <label>Gemzar 200mg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender_BMS_CN__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Final_BMS_CN__c</fullName>
        <description>Final Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Original_BMS_CN__c</fullName>
        <description>Original Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Verified_BMS_CN__c</fullName>
        <description>Verified Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HBV_Beds_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>HBV Beds - 乙肝床位数</description>
        <label>HBV Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HD_Glivec_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>HD Glivec Patients - 高剂量格列卫病人数</description>
        <label>HD Glivec Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hospital</description>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Re-targetings (Hospital)</relationshipLabel>
        <relationshipName>Hospital_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Final_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final Hospital</description>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Re-targetings (Hospital)</relationshipLabel>
        <relationshipName>Re_targetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_BMS_CN__c</fullName>
        <description>Master code of hospital popped up from Account Profile</description>
        <label>Hospital ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_Final_BMS_CN__c</fullName>
        <description>Final master code of hospital popped up from Account profile</description>
        <label>Hospital ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_Verified_BMS_CN__c</fullName>
        <description>Verified master code of hospital popped up from Account profile</description>
        <label>Hospital ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Original_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Hospital</description>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Re-targetings (Hospital)</relationshipLabel>
        <relationshipName>Re_targetings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Verified_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Verified Hospital</description>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Re-targetings (Hospital)</relationshipLabel>
        <relationshipName>Re_targetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_L_KEY_NUM_BMS_CN__c</fullName>
        <formula>IF( TEXT(Is_L_KEY_BMS_CN__c) = &apos;Yes&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is L-KEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventiv_Check_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inventiv Verification Flag</description>
        <label>Inventiv Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GIPAP_TIPAP_BMS_CN__c</fullName>
        <description>Is GIPAP/TIPAP - 是否GIPAP/TIPAP医生</description>
        <label>Is GIPAP/TIPAP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_GIPAP_TIPAP_NUM_BMS_CN__c</fullName>
        <formula>IF(TEXT(Is_GIPAP_TIPAP_BMS_CN__c) == &apos;Yes&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GIPAP/TIPAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_KOL_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is KOL</description>
        <label>Is KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_L_KEY_BMS_CN__c</fullName>
        <description>Is L-KEY - 是否L-KEY</description>
        <label>Is L-KEY</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Speaker_BMS_CN__c</fullName>
        <description>Is Speaker - 是否讲者</description>
        <label>Is Speaker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>